# TV-Automator

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
config/: default.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
docker/openbox-config/: rc.xml
scripts/: diagnose-display.sh  setup-xhost.sh
src/tv_automator/: __init__.py  config.py  main.py
src/tv_automator/automator/: __init__.py  browser_control.py
src/tv_automator/providers/: __init__.py  base.py  mlb.py  mlb_session.py
src/tv_automator/scheduler/: __init__.py  game_scheduler.py
src/tv_automator/tui/: app.py
src/tv_automator/tui/widgets/: game_card.py
src/tv_automator/web/: app.py
src/tv_automator/web/frontend/: package-lock.json  vite.config.ts
src/tv_automator/web/frontend/src/: App.tsx  index.css  layout.css  main.tsx
src/tv_automator/web/frontend/src/components/: NowPlayingBar.css  NowPlayingBar.tsx  Sidebar.tsx  TopBar.tsx
src/tv_automator/web/frontend/src/hooks/: useTvAutomator.tsx
src/tv_automator/web/frontend/src/views/: Dashboard.css  Dashboard.tsx  Music.css  Music.tsx  NowPlaying.css  NowPlaying.tsx  Settings.css  Settings.tsx  YouTube.css  YouTube.tsx
systemd/: tv-automator-xhost.service
