[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tv-automator"
version = "0.2.0"
description = "Self-hosted sports streaming appliance with web dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "MLB-StatsAPI>=1.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
]

[project.scripts]
tv-automator = "tv_automator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tv_automator"]
